feat: implement products feature, layout redesign and cleanup dashboard
