# apps/api/src/modules/categories/categories.module.ts
@@ -1,0 +1,12 @@
+import { Module } from '@nestjs/common'
+import { PrismaModule } from '../../prisma/prisma.module'
+import { CategoriesController } from './categories.controller'
+import { CategoriesService } from './categories.service'
+
+@Module({
+  imports: [PrismaModule],
+  controllers: [CategoriesController],
+  providers: [CategoriesService],
+  exports: [CategoriesService],
+})
+export class CategoriesModule {}
